@@ -1,3 +1,4 @@
+	* don't create all directories up front when adding torrents
 	* support DHT scrape
 	* added support for fadvise/F_RDADVISE for improved disk read performance
 	* introduced pop_alerts() which pops the entire alert queue in a single call
